# GifLoader

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/husky/gif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LogCat.cpp  LogCat.h  gifLoader.cpp
app/src/main/java/com/husky/gif/: GifLoader.java  MainActivity.java  StorageUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/husky/gif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
